選項頁面數個增加選項，並實際套用到文章頁面
 - 顯示樓層

 - 推噓文統計

 - 高亮度文章作者ID

 - 點選圖片進行下載

--- a/options.html
+++ b/options.html
@@ -7,9 +7,34 @@
   <body>
     <div>
       <label>
-        放大圖片：
-        <input type="checkbox" class="options" option-type="boolean" name="resizeImage">
+        <input type="checkbox" class="options" option-type="boolean" name="showFloor">
+        顯示樓層
       </label>
+      <br>
+
+      <label>
+        <input type="checkbox" class="options" option-type="boolean" name="countPushStatistics">
+        推噓文統計
+      </label>
+      <br>
+
+      <label>
+        <input type="checkbox" class="options" option-type="boolean" name="highlightPosterUserid">
+        高亮度文章作者id
+      </label>
+      <br>
+
+      <label>
+        <input type="checkbox" class="options" option-type="boolean" name="resizeImage">
+        放大圖片
+      </label>
+      <br>
+
+      <label>
+        <input type="checkbox" class="options" option-type="boolean" name="clickToDownloadImage">
+        點選圖片進行下載
+      </label>
+      <br>
     </div>
 
     <script src="utils/settings.js"></script>
