--- a/options.html
+++ b/options.html
@@ -38,6 +38,7 @@
     </div>
 
     <script src="utils/settings.js"></script>
+    <script src="utils/helpers.js"></script>
     <script src="options.js"></script>
   </body>
 </html>
