--- a/options.html
+++ b/options.html
@@ -37,6 +37,10 @@
       <br>
     </div>
 
+    <div>
+      <button type="button" id="resetSettings">將所有選項還原到預設值</button>
+    </div>
+
     <script src="utils/settings.js"></script>
     <script src="utils/helpers.js"></script>
     <script src="options.js"></script>
