頂部和底部導覽列自動隱藏

--- a/options.html
+++ b/options.html
@@ -35,6 +35,12 @@
         點選圖片進行下載
       </label>
       <br>
+
+      <label>
+        <input type="checkbox" class="options" option-type="boolean" name="navbarAutohide">
+        頂部和底部導覽列自動隱藏
+      </label>
+      <br>
     </div>
 
     <div>
