--- a/src/options.html
+++ b/src/options.html
@@ -41,6 +41,12 @@
         頂部和底部導覽列自動隱藏
       </label>
       <br>
+
+      <label title="讓「返回看板」按鈕指向文章所在的看板分頁而非最後一頁。本功能會在背景向站台發出查詢，會延遲數秒才生效，且會增加網路流量。">
+        <input type="checkbox" class="options" option-type="boolean" name="redirectReturnToBoard">
+        返回看板指向文章所在分頁
+      </label>
+      <br>
     </div>
 
     <div>
