article: support previous/next page

--- a/src/options.html
+++ b/src/options.html
@@ -42,9 +42,9 @@
       </label>
       <br>
 
-      <label title="讓「返回看板」按鈕指向文章所在的看板分頁而非最後一頁。本功能會在背景向站台發出查詢，會延遲數秒才生效，且會增加網路流量。">
-        <input type="checkbox" class="options" option-type="boolean" name="redirectReturnToBoard">
-        返回看板指向文章所在分頁
+      <label title="自動偵測同主題上下篇文章並產生連結，並使「返回看板」指向文章所在分頁。本功能會在背景向站台發出查詢，會延遲幾秒才生效，且會增加網路流量。">
+        <input type="checkbox" class="options" option-type="boolean" name="detectThread">
+        自動連結討論串
       </label>
       <br>
     </div>
