還原選項到預設值的按鈕不再需要確認
Fx57 在選項頁面無法使用 confirm，因此改為不需要確認

--- a/src/options.html
+++ b/src/options.html
@@ -2,6 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <style>
+      footer {
+        margin-top: 50px;
+      }
+    </style>
   </head>
 
   <body>
@@ -49,9 +54,9 @@
       <br>
     </div>
 
-    <div>
+    <footer>
       <button type="button" id="resetSettings">將所有選項還原到預設值</button>
-    </div>
+    </footer>
 
     <script src="utils/settings.js"></script>
     <script src="utils/helpers.js"></script>
