取消推文作者ID高亮度，改成修改作者的箭頭外觀

--- a/src/options.html
+++ b/src/options.html
@@ -25,7 +25,7 @@
 
       <label>
         <input type="checkbox" class="options" data-option-type="boolean" name="highlightPosterUserid">
-        高亮度文章作者id
+        作者的推文使用較明顯的箭頭
       </label>
       <br>
 
