選項頁面改成在新分頁開啟
試圖修正Android版無法完整顯示選項頁面的問題

--- a/src/options.html
+++ b/src/options.html
@@ -10,7 +10,13 @@
   </head>
 
   <body>
+    <header>
+      <h1>PTT Web Enhanced 選項</h1>
+    </header>
     <div>
+      (修改選項後會自動儲存)<br>
+      <br>
+
       <label>
         <input type="checkbox" class="options" data-option-type="boolean" name="showFloor">
         顯示樓層
