--- a/src/options.html
+++ b/src/options.html
@@ -64,6 +64,7 @@
       <button type="button" id="resetSettings">將所有選項還原到預設值</button>
     </footer>
 
+    <script src="lib/browser-polyfill.js"></script>
     <script src="utils/settings.js"></script>
     <script src="utils/helpers.js"></script>
     <script src="options.js"></script>
