加入 browser action 按鈕
- 選項視窗設定最小寬度，以免 browser action 開啟時過窄。

--- a/src/options.html
+++ b/src/options.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8">
     <style>
+      body {
+        min-width: 280px;
+      }
       footer {
         margin-top: 50px;
       }
