取消 data-option-type，直接根據原生 HTML 判定選項種類

--- a/src/options.html
+++ b/src/options.html
@@ -22,43 +22,43 @@
       <br>
 
       <label>
-        <input type="checkbox" class="options" data-option-type="boolean" name="showFloor">
+        <input type="checkbox" class="options" name="showFloor">
         顯示樓層
       </label>
       <br>
 
       <label>
-        <input type="checkbox" class="options" data-option-type="boolean" name="countPushStatistics">
+        <input type="checkbox" class="options" name="countPushStatistics">
         推噓文統計
       </label>
       <br>
 
       <label>
-        <input type="checkbox" class="options" data-option-type="boolean" name="highlightPosterUserid">
+        <input type="checkbox" class="options" name="highlightPosterUserid">
         作者的推文使用較明顯的箭頭
       </label>
       <br>
 
       <label>
-        <input type="checkbox" class="options" data-option-type="boolean" name="resizeImage">
+        <input type="checkbox" class="options" name="resizeImage">
         放大圖片
       </label>
       <br>
 
       <label>
-        <input type="checkbox" class="options" data-option-type="boolean" name="clickToDownloadImage">
+        <input type="checkbox" class="options" name="clickToDownloadImage">
         點選圖片進行下載
       </label>
       <br>
 
       <label>
-        <input type="checkbox" class="options" data-option-type="boolean" name="navbarAutohide">
+        <input type="checkbox" class="options" name="navbarAutohide">
         頂部和底部導覽列自動隱藏
       </label>
       <br>
 
       <label title="自動偵測同主題上下篇文章並產生連結，並使「返回看板」指向文章所在分頁。本功能會在背景向站台發出查詢，會延遲幾秒才生效，且會增加網路流量。">
-        <input type="checkbox" class="options" data-option-type="boolean" name="detectThread">
+        <input type="checkbox" class="options" name="detectThread">
         自動連結討論串
       </label>
       <br>
