支援黑名單

--- a/src/options.html
+++ b/src/options.html
@@ -62,6 +62,13 @@
         自動連結討論串
       </label>
       <br>
+
+      <label>
+        <input type="checkbox" class="options" name="blacklistEnabled">
+        啟用黑名單
+      </label>
+      <button type="button" id="blacklistSettings">設定黑名單</button>
+      <br>
     </div>
 
     <footer>
