支援自動勾選已滿十八歲

--- a/src/options.html
+++ b/src/options.html
@@ -22,6 +22,12 @@
       <br>
 
       <label>
+        <input type="checkbox" class="options" name="autoR18">
+        自動勾選已滿十八歲
+      </label>
+      <br>
+
+      <label>
         <input type="checkbox" class="options" name="showFloor">
         顯示樓層
       </label>
