選項頁 font-family 改用較好看的 sans-serif

--- a/src/options.html
+++ b/src/options.html
@@ -6,6 +6,7 @@
     <style>
       body {
         min-width: 280px;
+        font-family: sans-serif;
       }
       footer {
         margin-top: 50px;
