選項頁增加 title

--- a/src/options.html
+++ b/src/options.html
@@ -3,6 +3,8 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 
+<title>PTT Web Enhanced 選項</title>
+
 <style>
 body {
   min-width: 280px;
